syntax = "proto3";
option java_multiple_files = true;

package com.jd.live.agent.demo.grpc.service.api;

message UserGetRequest {
  int32 id = 1;
}

message UserGetResponse {
  int32 id = 1;
  string name = 2;
  int32 gender = 3;
  string unit = 4;
  string cell = 5;
  string cluster = 6;
  string cloud = 7;
  string group = 8;
  string ip = 9;
}

message UserCreateRequest {
  string name = 1;
  int32 gender = 2;
}

message UserCreateResponse {
  int32 id = 1;
}

service UserService {

  rpc get(UserGetRequest) returns (UserGetResponse);

  rpc create(UserCreateRequest) returns (UserCreateResponse);

}
